objects/Payment_EziDebit_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Digital_Key__c</fullName>
        <label>Digital Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment EziDebit Settings</label>
    <pluralLabel>Payment EziDebit Settings</pluralLabel>
</CustomObject>